Update to Java 12; make bundling work again on macOS
Still need to try the bundling out on Windows and Linux and make any
necessary adjustments on those platforms.